--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           <h1>myTunes</h1>
         </div>
         <div class="nav-menu">
-          <a href="hero">Overview</a>
-          <a href="#">Music</a>
-          <a href="#">Video</a>
-          <a href="#">Gift Cards</a>
+          <a href="#hero">Overview</a>
+          <a href="#music">Music</a>
+          <a href="#concert">Video</a>
+          <a href="#gift-section">Gift Cards</a>
         </div>
       </div>
     </header>
@@ -42,7 +42,7 @@
       </div>
     </div>
     <!--------------Music Section -------------------->
-    <div class="music">
+    <div class="music" id="music">
       <div class="music-heading">
         <h1><i class="fa-solid fa-music"></i> Music</h1>
         <h2>45 million songs. Zero ads.</h2>
@@ -75,7 +75,7 @@
       <button>Read More</button>
       <div class="music-mac">Hello1</div>
     </div>
-    <div class="concert">
+    <div class="concert" id="concert">
       <h2>A world of entertainment. Available wherever you are.</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
@@ -86,7 +86,7 @@
         laudantium soluta delectus!
       </p>
     </div>
-    <div class="gift-cards">
+    <div class="gift-cards" id="gift-section">
       <div class="card"></div>
       <div class="card-details">
         <h2>Gift Cards</h2>
@@ -104,5 +104,6 @@
         <button>Redeem</button>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
